--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.bg-nav {
+  background-color: #1da1f2 !important;
+}
+.dropdown-toggle {
+  color: white !important ;
+}
+.react-multiple-carousel__arrow {
+  background-color: #1da1f2 !important;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+}
+
+footer {
+  background-color: #1da1f2;
+  padding: 1rem;
+}
+
+.card-img-overlay {
+  top: unset !important;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.37);
+}
+
+.nav-link{
+color: #fff !important;
 }
